fix test then update service and controller pagination